# extg11

Lab1/: pyproject.toml
Lab1/solutions/: Allele-A1-functions.py  output.md  report.md  run_exercises.py
